<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>records</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>parsers</module>
        <module>utility</module>
        <module>app</module>
        <module>anns</module>
        <module>gui-utility</module>
        <module>data</module>
        <module>stf</module>
        <module>expressions</module>
        <module>functions</module>
        <module>tests</module>
        <module>lex-editor</module>
        <module>transformations</module>
        <module>book</module>
        <module>threadchecker</module>
        <module>anns-threadchecker</module>
        <module>r-interop</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <!-- <maven.compiler.verbose>true</maven.compiler.verbose> -->
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- For Java 10
            <plugin>
                <artifactId>maven-toolchains-plugin</artifactId>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>10</version>
                            <vendor>oracle</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            -->

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>groupId</groupId>
                            <artifactId>anns</artifactId>
                            <version>1.0-SNAPSHOT</version>
                        </path>
                        <dependency>
                            <groupId>org.checkerframework</groupId>
                            <artifactId>checker-qual</artifactId>
                            <version>3.1.1</version>
                        </dependency>
                        <dependency>
                            <groupId>org.checkerframework</groupId>
                            <artifactId>checker</artifactId>
                            <version>3.1.1</version>
                        </dependency>
                        <dependency>
                            <groupId>org.bluej</groupId>
                            <artifactId>anns-threadchecker</artifactId>
                            <version>1.0-SNAPSHOT</version>
                        </dependency>
                        <dependency>
                            <groupId>org.bluej</groupId>
                            <artifactId>threadchecker</artifactId>
                            <version>1.0-SNAPSHOT</version>
                        </dependency>
                        <path>
                            <groupId>org.bluej</groupId>
                            <artifactId>anns-threadchecker</artifactId>
                            <version>1.0-SNAPSHOT</version>
                        </path>
                        <path>
                            <groupId>org.bluej</groupId>
                            <artifactId>threadchecker</artifactId>
                            <version>1.0-SNAPSHOT</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        <arg>-AskipDefs=records.grammar.|one.util.</arg>
                        <arg>-Astubs=${project.basedir}/../stubs</arg>
                        <arg>-Aunits=annotation.units.AbsColIndex,annotation.units.AbsRowIndex,annotation.units.GridAreaColIndex,annotation.units.GridAreaRowIndex,annotation.units.TableDataRowIndex,annotation.units.TableDataColIndex,annotation.units.RowOrColIndex,annotation.units.CanonicalLocation,annotation.units.DisplayLocation,annotation.units.RawInputLocation,annotation.units.DisplayPixels,annotation.units.VirtualPixels</arg>
                        <!-- <arg>-AconservativeUninferredTypeArguments</arg> -->
                        <arg>-AsuppressWarnings=optional.parameter,optional.as.element.type,optional.collection</arg>
                        <!-- <arg>-Xbootclasspath/p:${org.bluej:threadchecker:jar}</arg> -->
                        <arg>-Xplugin:threadchecker.TCPlugin</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

        </plugins>
    </build>


    <profiles>
        <profile>
            <id>full</id>

            <activation>
                <!--
                <file>
                    <missing>src/test/java/test/TestUtil.java</missing>
                </file>
                -->
                <property>
                    <name>check</name>
                    <value>full</value>
                </property>
            </activation>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.8.0</version>
                            <configuration combine.children="append">
                                <annotationProcessors combine.self="override">
                                    <!-- Add all the checkers you want to enable during the full-check compile here -->
                                    <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
                                    <annotationProcessor>org.checkerframework.checker.optional.OptionalChecker</annotationProcessor>
                                    <annotationProcessor>org.checkerframework.checker.units.UnitsChecker</annotationProcessor>
                                    <annotationProcessor>org.checkerframework.checker.i18n.I18nChecker</annotationProcessor>
                                    <annotationProcessor>annotation.ValueTypeChecker</annotationProcessor>
                                    <annotationProcessor>annotation.userindex.UserIndexChecker</annotationProcessor>
                                    <annotationProcessor>annotation.help.HelpFileChecker</annotationProcessor>
                                    <annotationProcessor>annotation.funcdoc.FuncDocChecker</annotationProcessor>
                                    <annotationProcessor>annotation.recorded.RecordedChecker</annotationProcessor>
                                </annotationProcessors>
                                <compilerArgs combine.self="append">
                                    <arg>-Apropfiles=${project.basedir}/../app/src/main/resources/transformations_en.properties:${project.basedir}/../app/src/main/resources/expression_en.properties:${project.basedir}/../app/src/main/resources/function_en.properties:${project.basedir}/../app/src/main/resources/newcolumn_en.properties:${project.basedir}/../app/src/main/resources/dataentry_en.properties:${project.basedir}/../app/src/main/resources/main_en.properties:${project.basedir}/../app/src/main/resources/import_en.properties</arg>
                                    <arg>-Ahelpfiles=${project.basedir}/../app/src/main/help/agg-recipe.xml;${project.basedir}/../app/src/main/help/edit-settings.xml;${project.basedir}/../app/src/main/help/guess-format.xml;${project.basedir}/../app/src/main/help/edit-check.xml;${project.basedir}/../app/src/main/help/edit-column.xml;${project.basedir}/../app/src/main/help/edit-join.xml;${project.basedir}/../app/src/main/help/edit-r.xml;${project.basedir}/../app/src/main/help/edit-unit.xml;${project.basedir}/../app/src/main/help/split-by.xml</arg>
                                    <arg>-Afuncdocfiles=${project.basedir}/../app/src/main/funcdoc/boolean.xml;${project.basedir}/../app/src/main/funcdoc/comparison.xml;${project.basedir}/../app/src/main/funcdoc/conversion.xml;${project.basedir}/../app/src/main/funcdoc/core.xml;${project.basedir}/../app/src/main/funcdoc/datetime.xml;${project.basedir}/../app/src/main/funcdoc/list.xml;${project.basedir}/../app/src/main/funcdoc/listprocess.xml;${project.basedir}/../app/src/main/funcdoc/literals.xml;${project.basedir}/../app/src/main/funcdoc/lookup.xml;${project.basedir}/../app/src/main/funcdoc/math.xml;${project.basedir}/../app/src/main/funcdoc/number.xml;${project.basedir}/../app/src/main/funcdoc/operators.xml;${project.basedir}/../app/src/main/funcdoc/optional.xml;${project.basedir}/../app/src/main/funcdoc/text.xml</arg>
                                </compilerArgs>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>

        <profile>
            <id>quick</id>
            <activation>
                <property>
                    <name>check</name>
                    <value>!full</value>
                </property>
                <activeByDefault>true</activeByDefault>
                <!--
                <file>
                    <missing>src/test/java/test/TestUtil.java</missing>
                </file>
                -->
            </activation>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>3.8.0</version>
                            <configuration combine.children="append">
                                <annotationProcessors combine.self="override">
                                    <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
                                    <annotationProcessor>org.checkerframework.checker.units.UnitsChecker</annotationProcessor>
                                    <annotationProcessor>annotation.ValueTypeChecker</annotationProcessor>

                                    <annotationProcessor>annotation.identifier.IdentifierChecker</annotationProcessor>
                                </annotationProcessors>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
